# sqlManager

./: LICENCE  LICENSE  pyproject.toml  readme.md
src/sqlManager/: __init__.py  model.py
