[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlManager"
version = "0.1.0"
description = "A module to manage SQL queries very easily"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Benjamin Tchitche", email = "bentchitchedev31@gmail.com" }
]
dependencies = []
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlManager*"]
